--- a/src/components/Online-Store/ProductCard/ProductCard.css
+++ b/src/components/Online-Store/ProductCard/ProductCard.css
@@ -47,6 +47,12 @@
 }
 
 .product-sales {
+  font-weight: bold;
+  font-size: 0.8em;
+}
+
+.product-stock {
+  font-weight: bold;
   font-size: 0.8em;
 }
 
